--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: python
 
+before_install:
+ - sudo apt-get update -qq
+ - sudo apt-get install -qq iverilog
+ - sudo pip install termcolor
+
 script: python tb.py
