--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: python
 
+python:
+ - "2.7"
+
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq iverilog
- - sudo pip install termcolor
+
+install:
+ - pip install q termcolor
 
 script: python tb.py
